--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,14 @@
+#container {
+    display: grid; 
+    grid: repeat(2, 60px) / auto-flow 80px; 
+}
+
+#container > div {
+    background-color: #8ca0ff; 
+    width: 50px; 
+    height: 50px; 
+}
+    
 body {
     margin: 0; 
     background-color: bisque;
